--- a/index.html
+++ b/index.html
@@ -1,11 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <style>
+    .column-flex {
+      min-height: 150px;
+    }
+
+    body,
+    .container-fluid,
+    .row {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </head>
+
 <body>
-    
+  <div class="container-fluid text-center">
+
+    <div class="row g-1">
+      <div class="col-12 bg-dark border column-flex">
+        Columna 1
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-6 bg-dark border column-flex">
+        Columna 1
+      </div>
+      <div class="col-6 bg-dark border column-flex">
+        Columna 1
+      </div>
+    </div>
+    <div>
+
+      <table class="table table-striped table-hover align-middle">
+
+        <thead class="table-dark">
+          <tr>
+            <th>Leyes</th>
+            <th>SKU</th>
+            <th>Precio</th>
+            <th>Stock</th>
+            <th>Estado</th>
+          </tr>
+        </thead>
+        <tbody class="table-dark">
+          <tr>
+            <td>Principio de Semejanza</td>
+            <td>Principio de Proximidad</td>
+            <td>Principio de Figura y Fondo</td>
+            <td></td>
+            <td><span class="badge text-bg-success">Disponible</span></td>
+          </tr>
+          <tr>
+            <td>Principio de Continuidad</td>
+            <td>MN-907</td>
+            <td>249,00 €</td>
+            <td>8</td>
+            <td><span class="badge text-bg-warning">Bajo stock</span></td>
+          </tr>
+          <tr>
+            <td>Principio de cierre</td>
+            <td>MS-201</td>
+            <td>29,50 €</td>
+            <td>0</td>
+            <td><span class="badge text-bg-danger">Agotado</span></td>
+          </tr>          <tr>
+            <td></td>
+            <td>MS-201</td>
+            <td>29,50 €</td>
+            <td>0</td>
+            <td><span class="badge text-bg-danger">Agotado</span></td>
+          </tr>          <tr>
+            <td>Principio de cierre</td>
+            <td>MS-201</td>
+            <td>29,50 €</td>
+            <td>0</td>
+            <td><span class="badge text-bg-danger">Agotado</span></td>
+          </tr>          <tr>
+            <td>Principio de cierre</td>
+            <td>MS-201</td>
+            <td>29,50 €</td>
+            <td>0</td>
+            <td><span class="badge text-bg-danger">Agotado</span></td>
+          </tr>          <tr>
+            <td>Principio de cierre</td>
+            <td>MS-201</td>
+            <td>29,50 €</td>
+            <td>0</td>
+            <td><span class="badge text-bg-danger">Agotado</span></td>
+          </tr>          <tr>
+            <td>Principio de cierre</td>
+            <td>MS-201</td>
+            <td>29,50 €</td>
+            <td>0</td>
+            <td><span class="badge text-bg-danger">Agotado</span></td>
+          </tr>          <tr>
+            <td>Principio de cierre</td>
+            <td>MS-201</td>
+            <td>29,50 €</td>
+            <td>0</td>
+            <td><span class="badge text-bg-danger">Agotado</span></td>
+          </tr>          <tr>
+            <td>Principio de cierre</td>
+            <td>MS-201</td>
+            <td>29,50 €</td>
+            <td>0</td>
+            <td><span class="badge text-bg-danger">Agotado</span></td>
+          </tr>          <tr>
+            <td>Principio de cierre</td>
+            <td>MS-201</td>
+            <td>29,50 €</td>
+            <td>0</td>
+            <td><span class="badge text-bg-danger">Agotado</span></td>
+          </tr>1
+        </tbody>
+      </table>
+    </div>
+  </div>
+
+  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
