--- a/index.html
+++ b/index.html
@@ -24,102 +24,91 @@
   <div class="container-fluid text-center">
 
     <div class="row g-1">
-      <div class="col-12 bg-dark border column-flex">
-        Columna 1
+      <div class="col-12 bg-dark text-white border column-flex d-flex align-items-center justify-content-center">
+        <header>
+          <h1 class="m-0">Leyes de la Gestalt</h1>
+          <p class="mb-0">Haz clic en una ley de la tabla para leer una explicación en profundidad.</p>
+        </header>
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-6 bg-dark border column-flex">
-        Columna 1
-      </div>
-      <div class="col-6 bg-dark border column-flex">
-        Columna 1
-      </div>
-    </div>
     <div>
 
       <table class="table table-striped table-hover align-middle">
 
         <thead class="table-dark">
           <tr>
-            <th>Leyes</th>
-            <th>SKU</th>
-            <th>Precio</th>
-            <th>Stock</th>
-            <th>Estado</th>
+            <th>Ley</th>
+            <th>Área</th>
+            <th>Ejemplo</th>
+            <th>Aplicación</th>
+            <th>Notas</th>
           </tr>
         </thead>
-        <tbody class="table-dark">
+        <tbody>
           <tr>
-            <td>Principio de Semejanza</td>
-            <td>Principio de Proximidad</td>
-            <td>Principio de Figura y Fondo</td>
-            <td></td>
-            <td><span class="badge text-bg-success">Disponible</span></td>
+            <td><a href="leyes/semejanza.html">Principio de Semejanza</a></td>
+            <td>Apariencia</td>
+            <td>Iconos/colores similares</td>
+            <td>Agrupar visualmente elementos relacionados</td>
+            <td><span class="badge text-bg-primary">Útil en UI</span></td>
           </tr>
           <tr>
-            <td>Principio de Continuidad</td>
-            <td>MN-907</td>
-            <td>249,00 €</td>
-            <td>8</td>
-            <td><span class="badge text-bg-warning">Bajo stock</span></td>
+            <td><a href="leyes/continuidad.html">Principio de Continuidad</a></td>
+            <td>Trayectoria</td>
+            <td>Líneas o curvas que guían la vista</td>
+            <td>Guiar la mirada hacia elementos importantes</td>
+            <td><span class="badge text-bg-info">Guía visual</span></td>
           </tr>
           <tr>
-            <td>Principio de cierre</td>
-            <td>MS-201</td>
-            <td>29,50 €</td>
-            <td>0</td>
-            <td><span class="badge text-bg-danger">Agotado</span></td>
-          </tr>          <tr>
-            <td></td>
-            <td>MS-201</td>
-            <td>29,50 €</td>
-            <td>0</td>
-            <td><span class="badge text-bg-danger">Agotado</span></td>
-          </tr>          <tr>
-            <td>Principio de cierre</td>
-            <td>MS-201</td>
-            <td>29,50 €</td>
-            <td>0</td>
-            <td><span class="badge text-bg-danger">Agotado</span></td>
-          </tr>          <tr>
-            <td>Principio de cierre</td>
-            <td>MS-201</td>
-            <td>29,50 €</td>
-            <td>0</td>
-            <td><span class="badge text-bg-danger">Agotado</span></td>
-          </tr>          <tr>
-            <td>Principio de cierre</td>
-            <td>MS-201</td>
-            <td>29,50 €</td>
-            <td>0</td>
-            <td><span class="badge text-bg-danger">Agotado</span></td>
-          </tr>          <tr>
-            <td>Principio de cierre</td>
-            <td>MS-201</td>
-            <td>29,50 €</td>
-            <td>0</td>
-            <td><span class="badge text-bg-danger">Agotado</span></td>
-          </tr>          <tr>
-            <td>Principio de cierre</td>
-            <td>MS-201</td>
-            <td>29,50 €</td>
-            <td>0</td>
-            <td><span class="badge text-bg-danger">Agotado</span></td>
-          </tr>          <tr>
-            <td>Principio de cierre</td>
-            <td>MS-201</td>
-            <td>29,50 €</td>
-            <td>0</td>
-            <td><span class="badge text-bg-danger">Agotado</span></td>
-          </tr>          <tr>
-            <td>Principio de cierre</td>
-            <td>MS-201</td>
-            <td>29,50 €</td>
-            <td>0</td>
-            <td><span class="badge text-bg-danger">Agotado</span></td>
-          </tr>1
+            <td><a href="leyes/cierre.html">Principio de Cierre</a></td>
+            <td>Percepción</td>
+            <td>Formas incompletas que la mente completa</td>
+            <td>Sugerir formas o logos sin dibujarlos por completo</td>
+            <td><span class="badge text-bg-warning">Útil en branding</span></td>
+          </tr>
+          <tr>
+            <td><a href="leyes/proximidad.html">Principio de Proximidad</a></td>
+            <td>Agrupamiento</td>
+            <td>Elementos cercanos entre sí</td>
+            <td>Organizar contenidos y controles relacionados</td>
+            <td><span class="badge text-bg-success">Mejora usabilidad</span></td>
+          </tr>
+          <tr>
+            <td><a href="leyes/figura-fondo.html">Principio de Figura y Fondo</a></td>
+            <td>Contraste</td>
+            <td>Elementos que emergen sobre el fondo</td>
+            <td>Clarificar jerarquía y legibilidad</td>
+            <td><span class="badge text-bg-dark">Clave en composición</span></td>
+          </tr>
+          <tr>
+            <td><a href="leyes/simetria.html">Principio de Simetría</a></td>
+            <td>Balance</td>
+            <td>Diseños reflejados / equilibrados</td>
+            <td>Crear sensación de orden y estabilidad</td>
+            <td><span class="badge text-bg-secondary">Estética</span></td>
+          </tr>
+          <tr>
+            <td><a href="leyes/direccion-comun.html">Principio de Dirección Común</a></td>
+            <td>Movimiento</td>
+            <td>Elementos orientados en la misma dirección</td>
+            <td>Indicar flujo o relación entre elementos</td>
+            <td><span class="badge text-bg-primary">Flujo</span></td>
+          </tr>
+          <tr>
+            <td><a href="leyes/simplicidad.html">Principio de Simplicidad</a></td>
+            <td>Economía</td>
+            <td>Formas claras y sin exceso</td>
+            <td>Reducir ruido y mejorar comprensión</td>
+            <td><span class="badge text-bg-info">Priorizar claridad</span></td>
+          </tr>
+          <tr>
+            <td><a href="leyes/experiencia.html">Principio de Experiencia</a></td>
+            <td>Expectativa</td>
+            <td>Patrones aprendidos por el usuario</td>
+            <td>Aprovechar convenciones para facilitar uso</td>
+            <td><span class="badge text-bg-warning">Contextual</span></td>
+          </tr>
         </tbody>
       </table>
     </div>
