--- a/leyes/semejanza.html
+++ b/leyes/semejanza.html
@@ -15,7 +15,9 @@
       <li>Iconos con el mismo color se leen como un grupo.</li>
       <li>Filas alternas con color similar son percibidas como categorías.</li>
     </ul>
-    
+     <div class="my-3">
+      <img src="../img/semejanza.png" alt="Ejemplo de semejanza" class="img-fluid" />
+    </div>
     </div>
     <p><a href="../index.html">« Volver al índice</a></p>
   </div>
