--- a/index.html
+++ b/index.html
@@ -115,6 +115,21 @@
   </div>
 
   <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <footer class="bg-dark text-white mt-4" aria-label="Pie de página">
+    <div class="container py-3">
+      <div class="row align-items-center">
+        <div class="col-md-6 text-start">
+          <h5 class="mb-1">Leyes de la Gestalt</h5>
+          <p class="mb-0 small text-muted">Recursos y ejemplos sobre principios de la percepción visual.</p>
+        </div>
+        <div class="col-md-6 text-md-end text-start mt-2 mt-md-0">
+          <a href="pruebas.html" class="link-light me-3">Pruebas</a>
+          <a href="#" class="link-light me-3">Acerca</a>
+          <span class="small text-muted">© 2025</span>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
