--- a/leyes/continuidad.html
+++ b/leyes/continuidad.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Principio de Continuidad</title>
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body class="p-4">
   <div class="container">
@@ -14,8 +15,8 @@
     <p>En diagramas, las líneas que parecen seguir la misma dirección se perciben como conectadas.</p>
 
     <h4>Ejemplo visual</h4>
-    <div class="my-3">
-      <img src="../img/continuidad.png" alt="Ejemplo de continuidad" class="img-fluid" />
+    <div class="my-3 example-figure">
+      <img src="../img/continuidad.png" alt="Ejemplo de continuidad" class="img-fluid gestalt-img" />
     </div>
     <p><a href="../index.html">« Volver al índice</a></p>
   </div>
