--- a/leyes/proximidad.html
+++ b/leyes/proximidad.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Principio de Proximidad</title>
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body class="p-4">
   <div class="container">
@@ -13,8 +14,8 @@
     <h4>Uso en UI</h4>
     <p>Agrupar controles relacionados reduce la carga cognitiva y mejora la usabilidad.</p>
     <h4>Ejemplo visual</h4>
-    <div class="my-3">
-      <img src="../img/proximidad.png" alt="Ejemplo de proximidad" class="img-fluid" />
+    <div class="my-3 example-figure">
+      <img src="../img/proximidad.png" alt="Ejemplo de proximidad" class="img-fluid gestalt-img" />
     </div>
     <p><a href="../index.html">« Volver al índice</a></p>
   </div>
