--- a/leyes/semejanza.html
+++ b/leyes/semejanza.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Principio de Semejanza</title>
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body class="p-4">
   <div class="container">
@@ -15,9 +16,8 @@
       <li>Iconos con el mismo color se leen como un grupo.</li>
       <li>Filas alternas con color similar son percibidas como categorías.</li>
     </ul>
-     <div class="my-3">
-      <img src="../img/semejanza.png" alt="Ejemplo de semejanza" class="img-fluid" />
-    </div>
+    <div class="my-3 example-figure">
+      <img src="../img/semejanza.png" alt="Ejemplo de semejanza" class="img-fluid gestalt-img" />
     </div>
     <p><a href="../index.html">« Volver al índice</a></p>
   </div>
