--- a/leyes/direccion-comun.html
+++ b/leyes/direccion-comun.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Principio de Dirección Común</title>
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body class="p-4">
   <div class="container">
@@ -12,8 +13,8 @@
     <p>Elementos que se mueven o apuntan en la misma dirección tienden a ser vistos como parte de un mismo grupo o patrón.</p>
     <p>En diseño, usar alineaciones y vectores coherentes crea relaciones perceptivas claras.</p>
     <h4>Ejemplo visual</h4>
-    <div class="my-3">
-      <img src="../img/direccion-comun.png" alt="Ejemplo de dirección común" class="img-fluid" />
+    <div class="my-3 example-figure">
+      <img src="../img/direccion-comun.png" alt="Ejemplo de dirección común" class="img-fluid gestalt-img" />
     </div>
     <p><a href="../index.html">« Volver al índice</a></p>
   </div>
