--- a/leyes/experiencia.html
+++ b/leyes/experiencia.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Principio de Experiencia</title>
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body class="p-4">
   <div class="container">
@@ -12,8 +13,8 @@
     <p>Nuestras experiencias previas influyen en cómo interpretamos estímulos — la percepción se modela por el aprendizaje y la expectativa.</p>
     <p>En interfaces, aprovechar patrones conocidos mejora la usabilidad.</p>
     <h4>Ejemplo visual</h4>
-    <div class="my-3">
-      <img src="../img/experiencia.png" alt="Ejemplo de experiencia" class="img-fluid" />
+    <div class="my-3 example-figure">
+      <img src="../img/experiencia.png" alt="Ejemplo de experiencia" class="img-fluid gestalt-img" />
     </div>
     <p><a href="../index.html">« Volver al índice</a></p>
   </div>
