--- a/leyes/figura-fondo.html
+++ b/leyes/figura-fondo.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Principio de Figura y Fondo</title>
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body class="p-4">
   <div class="container">
@@ -13,8 +14,8 @@
     <h4>Ejemplo clásico</h4>
     <p>La imagen de la copa de Rubin, donde la copa y los dos rostros compiten por ser la figura.</p>
     <h4>Ejemplo visual</h4>
-    <div class="my-3">
-      <img src="../img/figura-fondo.png" alt="Ejemplo de figura y fondo" class="img-fluid" />
+    <div class="my-3 example-figure">
+      <img src="../img/figura-fondo.png" alt="Ejemplo de figura y fondo" class="img-fluid gestalt-img" />
     </div>
     <p><a href="../index.html">« Volver al índice</a></p>
   </div>
