--- a/leyes/simplicidad.html
+++ b/leyes/simplicidad.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Principio de Simplicidad</title>
   <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body class="p-4">
   <div class="container">
@@ -12,8 +13,8 @@
     <p>También conocido como la ley de la buena forma (Prägnanz): preferimos interpretaciones simples, estables y ordenadas.</p>
     <p>Los diseños claros y sin ruido facilitan la comprensión rápida.</p>
     <h4>Ejemplo visual</h4>
-    <div class="my-3">
-      <img src="../img/simplicidad.png" alt="Ejemplo de simplicidad" class="img-fluid" />
+    <div class="my-3 example-figure">
+      <img src="../img/simplicidad.png" alt="Ejemplo de simplicidad" class="img-fluid gestalt-img" />
     </div>
     <p><a href="../index.html">« Volver al índice</a></p>
   </div>
