--- a/pruebas.html
+++ b/pruebas.html
@@ -69,7 +69,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<form role="form">
-				<div class="form-group">
+				<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 					 
 					<label for="exampleInputEmail1">
 						Email address
@@ -92,7 +92,7 @@
 					<p class="help-block">
 						Example block-level help text here.
 					</p>
-				</div>
+				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 				<div class="checkbox">
 					 
 					<label>
